welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:15: error: ';' expected but 'else' found.
	else {
        ^